--- a/gmailLogin/test-output/old/Default suite/methods.html
+++ b/gmailLogin/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c87b81">  <td>17/01/16 13:52:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@6d4b1c02]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>17/01/16 13:52:15</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.f()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@6d4b1c02]">f</td> 
-  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>17/01/16 13:52:25</td>   <td>10087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@6d4b1c02]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>17/01/17 14:13:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@76508ed1]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>17/01/17 14:13:45</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.invalidLogin()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@76508ed1]">invalidLogin</td> 
+  <td>main@1021436681</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>17/01/17 14:14:00</td>   <td>15690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@76508ed1]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1021436681</td>   <td></td> </tr>
 </table>
