--- a/gmailLogin/test-output/old/Default suite/methods-not-run.html
+++ b/gmailLogin/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.f</td></tr>
+<tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidPassword</td></tr>
 </table>
