--- a/gmailLogin/test-output/index.html
+++ b/gmailLogin/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1377260712\testng-customsuite.xml</span>
+                    <span>C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse-375100204\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="AutomationTrainingPrj1.gmailLogin.gmailLoginTest" hash-for-method="invalidEmail">invalidEmail</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="AutomationTrainingPrj1.gmailLogin.BookingTest" hash-for-method="testSearch">testSearch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AutomationTrainingPrj1.gmailLogin.gmailLoginTest</span>
+              <span class="class-name">AutomationTrainingPrj1.gmailLogin.BookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="invalidEmail">
-                  </a> <!-- invalidEmail -->
-                  <span class="method-name">invalidEmail</span>
+                  <a name="testSearch">
+                  </a> <!-- testSearch -->
+                  <span class="method-name">testSearch</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1377260712\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse-375100204\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AutomationTrainingPrj1.gmailLogin.gmailLoginTest&quot;&gt;
+      &lt;class name=&quot;AutomationTrainingPrj1.gmailLogin.BookingTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;invalidEmail&quot;/&gt;
+          &lt;include name=&quot;testSearch&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- AutomationTrainingPrj1.gmailLogin.gmailLoginTest --&gt;
+      &lt;/class&gt; &lt;!-- AutomationTrainingPrj1.gmailLogin.BookingTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,9 +190,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'invalidEmail')
-data.setCell(0, 2, 'AutomationTrainingPrj1.gmailLogin.gmailLoginTest')
-data.setCell(0, 3, 68345);
+data.setCell(0, 1, 'testSearch')
+data.setCell(0, 2, 'AutomationTrainingPrj1.gmailLogin.BookingTest')
+data.setCell(0, 3, 61116);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -212,18 +212,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">AutomationTrainingPrj1.gmailLogin.gmailLoginTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">f</span>
-                <br/>
-                <span class="ignored-method-name">invalidPassword</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -232,19 +223,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AutomationTrainingPrj1.gmailLogin.gmailLoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AutomationTrainingPrj1.gmailLogin.BookingTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">invalidEmail</span>
-                <span class="method-start">14 ms</span>
+                <span class="method-name">testSearch</span>
+                <span class="method-start">7 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">68363 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
