--- a/gmailLogin/test-output/old/Default suite/classes.html
+++ b/gmailLogin/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest</td>
+<td>AutomationTrainingPrj1.gmailLogin.BookingTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidLogin</td>
+<td>testSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -30,10 +26,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
