--- a/gmailLogin/test-output/old/Default suite/methods-alphabetical.html
+++ b/gmailLogin/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="916c74">  <td>17/01/20 12:33:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.BookingTest@3daa422a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1156304131</td>   <td></td> </tr>
-<tr bgcolor="916c74">  <td>17/01/20 12:33:27</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingTest.testSearch()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.BookingTest@3daa422a]">testSearch</td> 
-  <td>main@1156304131</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/20 14:40:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/20 14:40:38</td>   <td>-19275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/20 14:40:38</td>   <td>-19268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.invalidEmailExcel()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">invalidEmailExcel</td> 
+  <td>main@1332668132</td>   <td></td> </tr>
 </table>
