--- a/gmailLogin/test-output/old/Default suite/methods-alphabetical.html
+++ b/gmailLogin/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8d7062">  <td>17/01/20 14:40:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="8d7062">  <td>17/01/20 14:51:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>17/01/20 14:40:38</td>   <td>-19275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="8d7062">  <td>17/01/20 14:50:39</td>   <td>-43326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>17/01/20 14:40:38</td>   <td>-19268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.invalidEmailExcel()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">invalidEmailExcel</td> 
+<tr bgcolor="8d7062">  <td>17/01/20 14:50:39</td>   <td>-43316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.invalidPassword()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">invalidPassword</td> 
   <td>main@1332668132</td>   <td></td> </tr>
 </table>
