--- a/gmailLogin/test-output/old/Default suite/methods.html
+++ b/gmailLogin/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79f379">  <td>17/01/24 13:19:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@f6c48ac]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>17/01/24 13:19:16</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.validLogin()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@f6c48ac]">validLogin</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>17/01/24 13:19:26</td>   <td>10048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@f6c48ac]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/24 14:48:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;gmailLoginTest.beforeMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/24 14:48:39</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gmailLoginTest.validLogin()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">validLogin</td> 
+  <td>main@1332668132</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>17/01/24 14:49:14</td>   <td>35484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;gmailLoginTest.afterMethod()[pri:0, instance:AutomationTrainingPrj1.gmailLogin.gmailLoginTest@41fbdac4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1332668132</td>   <td></td> </tr>
 </table>
