read credentials from excel file, for both valid and invalid credentials. verify that email was sent by grabbing the pop up that shows up using contains(text()...

--- a/gmailLogin/test-output/old/Default suite/classes.html
+++ b/gmailLogin/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>invalidPasswdExcel</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>invalidPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
