--- a/gmailLogin/test-output/old/Default suite/methods-not-run.html
+++ b/gmailLogin/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidPasswdExcel</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.validLoginExcel</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidPassword</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.validLoginToYahoo</td></tr>
