--- a/gmailLogin/test-output/index.html
+++ b/gmailLogin/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1484034599\testng-customsuite.xml</span>
+                    <span>C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1980130050\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1484034599\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\asuriv.SQS\AppData\Local\Temp\testng-eclipse--1980130050\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -192,12 +192,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validLogin')
 data.setCell(0, 2, 'AutomationTrainingPrj1.gmailLogin.gmailLoginTest')
-data.setCell(0, 3, 45189);
+data.setCell(0, 3, 49260);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,12 +212,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">AutomationTrainingPrj1.gmailLogin.gmailLoginTest</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">invalidPasswdExcel</span>
+                <br/>
                 <span class="ignored-method-name">validLoginExcel</span>
                 <br/>
                 <span class="ignored-method-name">invalidPassword</span>
@@ -245,11 +247,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validLogin</span>
-                <span class="method-start">11 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">45201 ms</span>
+                <span class="method-start">49260 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
